; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_proto-tcp.c_state_to_string.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_proto-tcp.c_state_to_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@state_to_string.buf = internal global [64 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [9 x i8] c"LAST-ACK\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"FIN-WAIT-1\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"FIN-WAIT-2\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"CLOSING\00", align 1
@.str.4 = private unnamed_addr constant [10 x i8] c"TIME-WAIT\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"SYN_SENT\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"ESTABLISHED_SEND\00", align 1
@.str.7 = private unnamed_addr constant [17 x i8] c"ESTABLISHED_RECV\00", align 1
@.str.8 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @state_to_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @state_to_string(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 130, label %5
    i32 132, label %6
    i32 131, label %7
    i32 135, label %8
    i32 128, label %9
    i32 129, label %10
    i32 133, label %11
    i32 134, label %12
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %16

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %16

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %16

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %16

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %16

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %16

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %16

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @sprintf_s(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @state_to_string.buf, i64 0, i64 0), i32 64, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.8, i64 0, i64 0), i32 %14)
  store i8* getelementptr inbounds ([64 x i8], [64 x i8]* @state_to_string.buf, i64 0, i64 0), i8** %2, align 8
  br label %16

16:                                               ; preds = %13, %12, %11, %10, %9, %8, %7, %6, %5
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i32 @sprintf_s(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
